--- a/indexRu.html
+++ b/indexRu.html
@@ -37,7 +37,7 @@
 						<li><a href="#portfolio">портфолио</a></li>
 						<li><a href="#contacts">связь</a></li>
 					</ul>
-					<p><a href="">ru</a> | <a href="">eng</a></p>
+					<p><a href="https://oldak7.github.io/citeRu/">ru</a> | <a href="https://oldak7.github.io/cite/">eng</a></p>
 				</nav>
 			</div>
 		</div>
@@ -47,7 +47,7 @@
 			<div class="home__description">
 				<h1>алмаз <br> каримов</h1>
 				<p>фронтенд <br>	30 лет, Уфа</p>
-				<p> <a href="">ru</a> | <a href="">eng</a></p>
+				<p> <a href="https://oldak7.github.io/citeRu/">ru</a> | <a href="https://oldak7.github.io/cite/">eng</a></p>
 			</div>
 			<div class="home__img"></div>
 		</div>
