--- a/index.html
+++ b/index.html
@@ -42,37 +42,37 @@
 			</div>
 		</div>
 	</nav>
-	<div class="home">
+	<div class="home wow fadeInUp">
 		<div class="container">
-			<div class="home__description">
+			<div class="home__description wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay=".5s">
 				<h1>алмаз <br> каримов</h1>
 				<p>фронтенд <br>	30 лет, Уфа</p>
 				<p> <a href="https://oldak7.github.io/citeRu/">ru</a> | <a href="https://oldak7.github.io/cite/">eng</a></p>
 			</div>
-			<div class="home__img"></div>
+			<div class="home__img wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay="1s"></div>
 		</div>
 	</div>
-	<div class="about" id="about_me">
+	<div class="about wow fadeInUp" id="about_me">
 		<div class="container">
-			<div class="about__title title">
+			<div class="about__title title wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay=".5s">
 				обо мне
 			</div>
-			<div class="about__text text">
+			<div class="about__text text wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay="1s">
 				<p>Привет, я Алмаз — Frontend разработчик из Уфы. Интересуюсь фронтендом и всем, что с ним связано.</p>
 				<p>Я учусь на курсах "Веб-разработка" в IT-Академии.</p>
 				<p>Готов развиваться и реализовать отличные проекты с замечательными людьми.</p>
 			</div>
 		</div>
 	</div>
-	<div class="skills" id="skills">
+	<div class="skills wow fadeInUp" id="skills">
 		<div class="container">
-			<div class="skills__title title">
+			<div class="skills__title title wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay=".5s">
 				навыки
 			</div>
-			<div class="skills__text text">
+			<div class="skills__text text wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay="1s">
 				<p>Я работаю с такими программами и технологиями как</p>
 			</div>
-			<div class="slider">
+			<div class="slider wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay="1.5s">
 				<div class="slider__item">
 					<div class="slider__content">
 						<div class="slider__img">
@@ -219,12 +219,12 @@
 			</div>
 		</div>
 	</div>
-	<div class="portfolio" id="portfolio">
+	<div class="portfolio wow fadeInUp" id="portfolio">
 		<div class="container">
-			<div class="portfolio__title title">
+			<div class="portfolio__title title wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay=".5s">
 				портфолио
 			</div>
-			<div class="portfolio-item">
+			<div class="portfolio-item wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay="1s">
 				<div class="portfolio-item__img">
 					<img src="./img/yoron.jpg" alt="law firm cite">
 				</div>
@@ -232,7 +232,7 @@
 					<a href="https://youristonline.ru" target="_blank">сайт юридической фирмы</a>	
 				</div>
 			</div>
-			<div class="portfolio-item">
+			<div class="portfolio-item wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay="1s">
 				<div class="portfolio-item__img">
 					<img src="./img/A&E.jpg" alt="wedding invitation cite">
 				</div>
@@ -240,7 +240,7 @@
 					<a href="https://pravilniivibor.ru/almaz-elina" target="_blank">сайт приглашение на свадьбу</a>
 				</div>
 			</div>
-			<div class="portfolio-item">
+			<div class="portfolio-item wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay="1s">
 				<div class="portfolio-item__img">
 					<img src="./img/chn.jpg" alt="products china cite">
 				</div>
@@ -250,16 +250,16 @@
 			</div>
 		</div>
 	</div>
-	<div class="contacts" id="contacts">
+	<div class="contacts wow fadeInUp" id="contacts">
 		<div class="container">
-			<div class="contacts__title title">
+			<div class="contacts__title title wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay=".5s">
 				связь
 			</div>
-			<div class="contacts__text text">
+			<div class="contacts__text text wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay="1s">
 				Хотите узнать больше или просто поболтать? <br>
 				Пишите в соцсетях =)
 			</div>
-			<div class="contacts__btn">
+			<div class="contacts__btn wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay="1.5s">
 				<a class="contacts_modal" href="#">send message</a>
 			</div>
 			<div class="contacts__suptext">
@@ -306,6 +306,7 @@
 		<div class="modal-overlay" id="myOverlay"></div>
 	</div>
 	<script src="js/JQuery.min.js"></script>
+	<script src="js/wow.min.js"></script>
 	<script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
 </body>
