--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<li><a href="#portfolio">портфолио</a></li>
 						<li><a href="#contacts">связь</a></li>
 					</ul>
-					<p><a href="https://oldak7.github.io/citeRu/">ru</a> | <a href="https://oldak7.github.io/cite/">eng</a></p>
+					<p><a href="https://vomirak.ru">ru</a> | <a href="https://oldak7.github.io/cite/">eng</a></p>
 				</nav>
 			</div>
 		</div>
@@ -47,7 +47,7 @@
 			<div class="home__description wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay=".5s">
 				<h1>алмаз <br> каримов</h1>
 				<p>фронтенд <br>	30 лет, Уфа</p>
-				<p> <a href="https://oldak7.github.io/citeRu/">ru</a> | <a href="https://oldak7.github.io/cite/">eng</a></p>
+				<p> <a href="https://vomirak.ru">ru</a> | <a href="https://oldak7.github.io/cite/">eng</a></p>
 			</div>
 			<div class="home__img wow fadeInUp" data-wow-offset="10" data-wow-duration=".8s" data-wow-delay="1s"></div>
 		</div>
